--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,13 @@
 		<artifactId>mysql-connector-java</artifactId>
 		<version>8.0.20</version>
 	</dependency>
-    
+	
+	<!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20190722</version>
+</dependency>
+	
   </dependencies>
 </project>
